WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248135
Unreviewed, speculative build fix
https://bugs.webkit.org/show_bug.cgi?id=248135
Summary
Unreviewed, speculative build fix
Yusuke Suzuki
Reported
2022-11-19 15:29:04 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-19 15:29:19 PST
<
rdar://problem/102552493
>
Yusuke Suzuki
Comment 2
2022-11-19 15:31:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6676
EWS
Comment 3
2022-11-19 15:33:13 PST
Committed
256879@main
(f643ea414400): <
https://commits.webkit.org/256879@main
> Reviewed commits have been landed. Closing PR #6676 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug