Unreviewed, speculative build fix https://bugs.webkit.org/show_bug.cgi?id=248135 rdar://102552493

* Source/bmalloc/libpas/src/libpas/pas_root.c:
(is_compact_pointer_enabled):

Canonical link: https://commits.webkit.org/256879@main